Prevent overflow-x on html/body.

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -6,6 +6,10 @@
   box-sizing: inherit;
 }
 
+html, body {
+  overflow-x: hidden;
+}
+
 html {
   box-sizing: border-box;
   height: 100%;
